<resources>
    <!-- Toolbar titles -->
    <string name="settings_title">Settings</string>
    <string name="blacklist_title">Blacklist</string>
    <string name="about_title">About</string>

    <!-- Actions -->
    <string name="action_clear">Clear</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_select">Toggle selection mode</string>
    <string name="action_share">Share</string>
    <string name="action_copy">Copy to clipboard</string>
    <string name="action_copy_short">Copy</string>
    <string name="action_delete">Delete</string>
    <string name="action_create_paste">Create paste</string>

    <!-- Main activity stuff -->
    <string name="just_now">Just Now</string>
    <string name="crash_count">%1$s (%2$d)</string>
    <string name="app_not_installed">%s (not installed)</string>
    <string name="copy_label">Stack trace of %s</string>
    <string name="copied_toast">Stack trace copied to clipboard</string>
    <plurals name="items_selected_count">
        <item quantity="one">%d crash selected</item>
        <item quantity="other">%d crashes selected</item>
    </plurals>
    <plurals name="items_children_count">
        <item quantity="one">%d Crash</item>
        <item quantity="other">%d Crashes</item>
    </plurals>
    <string name="dialog_clear_content">Are you sure you want to clear all crashes?</string>
    <plurals name="delete_multiple_confirm">
        <item quantity="one">Delete %d crash? This can\'t be undone!</item>
        <item quantity="other">Delete %d crashes? This can\'t be undone!</item>
    </plurals>
    <string name="no_items">No crashes yet.</string>
    <!--        You can get a bit creative here as it's probably not too easy to translate directly -->
    <string name="make_crash">Wanna make something crash? ಠ‿ಠ</string>

    <!-- Paste -->
    <string name="setup_paste_service">No paste service configured. Set one up in the settings and try again.</string>
    <string name="create_paste_success">Successfully created paste. URL copied to clipboard.</string>
    <string name="create_paste_fail">"Failed to create paste: %1$s"</string>

    <!-- Setting categories -->
    <string name="settings_notif">Notifications</string>
    <string name="settings_overview">Overview</string>
    <string name="settings_detail_view">Detail View</string>
    <string name="settings_paste_service">Paste Service</string>
    <string name="settings_misc">Miscellaneous</string>

    <!-- Settings (notifications) -->
    <string name="settings_system_notifications">Notification settings</string>
    <string name="settings_system_notifications_summary">Manage app notifications on the system level</string>
    <string name="settings_show_notif">Show notification on crash</string>
    <string name="settings_action_buttons">Show action buttons</string>
    <string name="settings_action_buttons_summary">Add buttons to copy and share the crash to the notification</string>
    <string name="settings_show_stack_trace">Show stack trace in notification</string>
    <string name="settings_show_stack_trace_summary">Display the beginning of the stack trace in the notification instead of just the description</string>

    <!-- Settings (overview) -->
    <string name="settings_combine_same_apps">Combine same apps</string>
    <string name="settings_combine_same_apps_summary">Sort crashes by individual app entries which contain the different crashes</string>
    <string name="settings_combine_same_trace">Combine same crashes</string>
    <string name="settings_combine_same_trace_summary">Combine crashes from the same app with the same stack trace into one item</string>
    <string name="settings_search_pkg">Search in package name</string>
    <string name="settings_search_pkg_summary">Search for the given term in the app name as well as in the package name</string>
    <string name="settings_blacklisted_apps">Blacklisted apps</string>
    <string name="settings_blacklisted_apps_summary">Crashes caused by blacklisted apps will be hidden</string>

    <!-- Settings (detail view) -->
    <string name="settings_auto_wrap">Automatic line wrap</string>
    <string name="settings_auto_wrap_summary">Limit maximum line width to screen width</string>

    <!-- Settings (paste service) -->
    <string name="settings_paste_url_title">Paste URL</string>
    <string name="settings_paste_url_summary">The paste service URL (e.g. https://hastebin.cc/documents)</string>
    <string name="settings_paste_json_key_title">Paste ID key</string>
    <string name="settings_paste_json_key_summary">The key of the paste ID in the JSON response. If the service returns {\"key\":\"PasteID\"}, this should be key.</string>
    <string name="settings_paste_template_title">Paste URL Template</string>
    <string name="settings_paste_template_summary">URL where the created paste can be found. It should contain %s, which will be replaced with the paste ID (e.g. https://hastebin.cc/%s)</string>

    <!-- Settings (miscellaneous) -->
    <string name="settings_permission_status">Permission status</string>
    <string name="settings_permission_status_summary_true">READ_LOGS permission is granted</string>
    <string name="settings_permission_status_summary_false">READ_LOGS permission is denied</string>
    <string name="settings_autostart_on_boot">Autostart Scoop on boot</string>
    <string name="settings_autostart_on_boot_summary">Automatically start Scoop on device boot alongside other system processes</string>
    <string name="settings_ignore_threaddeath">Ignore ThreadDeath Errors</string>
    <string name="settings_ignore_threaddeath_summary">A ThreadDeath Error gets thrown to force stop a worker thread. It is a \"normal occurrence\" and does not make apps crash</string>
    <string name="settings_about">About Scoop</string>

    <!-- About screen -->
    <string name="about_author">Developed by %1$s</string>
    <string name="about_version">Version %1$s (%2$d)</string>
    <string name="about_github">Source code</string>

    <!-- Notification channels -->
    <string name="crash_channel">Application crashes</string>
    <string name="status_channel">Scoop status</string>
    <string name="scoop_running">Monitoring app crashes</string>
    <string name="action_kill">Stop</string>
</resources>
