<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_notif">

        <SwitchPreference
            android:defaultValue="true"
            android:key="show_notification"
            android:title="@string/settings_show_notif" />

        <SwitchPreference
            android:defaultValue="true"
            android:dependency="show_notification"
            android:key="show_action_buttons"
            android:summary="@string/settings_action_buttons_summary"
            android:title="@string/settings_action_buttons" />

        <SwitchPreference
            android:defaultValue="false"
            android:dependency="show_notification"
            android:key="show_stack_trace_notif"
            android:summary="@string/settings_show_stack_trace_summary"
            android:title="@string/settings_show_stack_trace" />

    </PreferenceCategory>


    <PreferenceCategory android:title="@string/settings_overview">

        <SwitchPreference
            android:defaultValue="false"
            android:key="combine_same_apps"
            android:summary="@string/settings_combine_same_apps_summary"
            android:title="@string/settings_combine_same_apps" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="combine_same_stack_trace"
            android:summary="@string/settings_combine_same_trace_summary"
            android:title="@string/settings_combine_same_trace" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="search_package_name"
            android:summary="@string/settings_search_pkg_summary"
            android:title="@string/settings_search_pkg" />

        <Preference
            android:summary="@string/settings_blacklisted_apps_summary"
            android:title="@string/settings_blacklisted_apps">
            <intent
                android:targetClass="tk.wasdennnoch.scoop.ui.BlacklistAppsActivity"
                android:targetPackage="@string/application_id" />
        </Preference>

    </PreferenceCategory>


    <PreferenceCategory android:title="@string/settings_detail_view">

        <SwitchPreference
            android:defaultValue="false"
            android:key="auto_wrap"
            android:summary="@string/settings_auto_wrap_summary"
            android:title="@string/settings_auto_wrap" />

    </PreferenceCategory>


    <PreferenceCategory android:title="@string/settings_misc">

        <SwitchPreference
            android:defaultValue="true"
            android:key="ignore_threaddeath"
            android:summary="@string/settings_ignore_threaddeath_summary"
            android:title="@string/settings_ignore_threaddeath" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="force_english"
            android:title="@string/settings_force_eng" />

        <Preference android:title="@string/settings_about">
            <intent
                android:targetClass="tk.wasdennnoch.scoop.ui.AboutActivity"
                android:targetPackage="@string/application_id" />
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>
